--- a/CSE460/Lab/Phase1/To Turn In/README
+++ b/CSE460/Lab/Phase1/To Turn In/README
@@ -1,6 +1,7 @@
 to run phase 1
 1. download all files into one folder
 2. inside terminal type "make" to run the makefile
-3. inside terminal type "./os prog.s" to change input edit prog.in
-4. the output will be inside the .out file
-5. same process for other ".s" files
+3. inside terminal type "./os prog.s" (.s files are assembly code files)
+4.to change input edit prog.in file
+5. the output will be inside the .out file
+6. same process for other ".s" files
